--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -6,15 +6,14 @@ layout: base.njk
   .post-title {
     margin-top: calc(0.75 * 1.25rem);
     text-align: center;
-    font-feature-settings: "smcp" 1;
+    font-feature-settings: "smcp" 1, "c2sc" 1;
     letter-spacing: 2px;
   }
 
   .post-date {
     text-align: center;
-    font-size: 0.9rem;
-    opacity: 0.7;
     margin-top: calc(0.5 * 1.25rem);
+    opacity: 0.7;
   }
 
   .post-body {
