--- a/index.njk
+++ b/index.njk
@@ -72,9 +72,12 @@ eleventyExcludeFromCollections: true
 
     .grid {
       display: grid;
-      grid-template-columns: 25vw 1fr;
+      grid-template-columns: max(18rem, 25vw) 1fr;
       grid-template-rows: auto 1fr;
       height: 100vh;
+      border: 1px solid #2f73f7;
+      gap: 1px;
+      background: #2f73f7;
     }
 
     .cell-header {
@@ -83,6 +86,7 @@ eleventyExcludeFromCollections: true
       align-items: center;
       justify-content: center;
       padding: 1.25rem;
+      background: #360816;
     }
 
     .cell-header img {
@@ -93,14 +97,20 @@ eleventyExcludeFromCollections: true
 
     .site-title {
       margin-top: 0.625rem;
-      font-feature-settings: "smcp" 1;
+      font-feature-settings: "smcp" 1, "c2sc" 1;
       letter-spacing: 2px;
       font-size: 1rem;
+      text-decoration: none;
+    }
+
+    .site-title:hover {
+      text-decoration: none;
     }
 
     .cell-nav {
       overflow-y: auto;
       padding: 1.25rem;
+      background: #360816;
     }
 
     .cell-post {
@@ -109,6 +119,7 @@ eleventyExcludeFromCollections: true
       overflow-y: auto;
       scrollbar-width: none;
       padding: 1.25rem 1.25rem calc(3 * 1.25rem);
+      background: #360816;
     }
 
     .cell-post::-webkit-scrollbar {
@@ -125,8 +136,13 @@ eleventyExcludeFromCollections: true
 
     .nav-list a {
       display: block;
-      font-feature-settings: "smcp" 1;
+      font-feature-settings: "smcp" 1, "c2sc" 1;
       letter-spacing: 2px;
+      text-decoration: none;
+    }
+
+    .nav-list a:hover {
+      text-decoration: none;
     }
 
     .nav-list .nav-date {
@@ -134,22 +150,23 @@ eleventyExcludeFromCollections: true
       opacity: 0.6;
     }
 
-    .nav-list a.active {
-      text-decoration: underline;
+    .nav-list a.active .nav-title::after,
+    .nav-list a:hover .nav-title::after {
+      content: ' ✴';
+      color: #2f73f7;
     }
 
     .post-title {
       margin-top: calc(0.75 * 1.25rem);
       text-align: center;
-      font-feature-settings: "smcp" 1;
+      font-feature-settings: "smcp" 1, "c2sc" 1;
       letter-spacing: 2px;
     }
 
     .post-date {
       text-align: center;
-      font-size: 0.9rem;
-      opacity: 0.7;
       margin-top: calc(0.5 * 1.25rem);
+      opacity: 0.7;
     }
 
     .post-body {
@@ -238,7 +255,7 @@ eleventyExcludeFromCollections: true
       font-family: 'source-code-pro', consolas, menlo, monospace;
     }
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 800px) {
       html, body {
         font-size: 18px;
         line-height: 1.2;
@@ -256,7 +273,7 @@ eleventyExcludeFromCollections: true
         grid-column: auto;
       }
 
-      .cell-nav {
+      .cell-post {
         order: 3;
       }
     }
@@ -266,14 +283,14 @@ eleventyExcludeFromCollections: true
   <div class="grid">
     <div class="cell-header">
       <img src="{{ '/white-diamond.jpg' | url }}" alt="">
-      <div class="site-title">Starlight Convenience</div>
+      <a href="{{ '/' | url }}" class="site-title">Starlight Convenience</a>
     </div>
     <nav class="cell-nav">
       <ul class="nav-list">
         {%- for post in collections.posts %}
         <li>
           <a href="#{{ post.fileSlug }}" data-slug="{{ post.fileSlug }}">
-            {{ post.data.title }}
+            <span class="nav-title">{{ post.data.title }}</span>
             <span class="nav-date">{{ post.date | readableDate }}</span>
           </a>
         </li>
