add old posts, support images, add section breaks

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -70,10 +70,12 @@
     hr {
       border: none;
       text-align: center;
+      margin: 2rem 0;
     }
 
     hr:after {
-      content: "*";
+      content: '✴';
+      color: #2f73f7;
     }
 
     .site-header {
