--- a/index.njk
+++ b/index.njk
@@ -68,7 +68,7 @@ eleventyExcludeFromCollections: true
     strong, b { font-weight: normal; }
 
     hr { border: none; text-align: center; }
-    hr:after { content: "*"; }
+    hr:after { content: '✴'; color: #2f73f7; }
 
     .grid {
       display: grid;
