fix links and hr spacing

--- a/index.njk
+++ b/index.njk
@@ -68,7 +68,7 @@ eleventyExcludeFromCollections: true
     em, i { font-style: italic; }
     strong, b { font-weight: normal; }
 
-    hr { border: none; text-align: center; }
+    hr { border: none; text-align: center; margin: 2rem 0; }
     hr:after { content: '✴'; color: #2f73f7; }
 
     .grid {
@@ -308,7 +308,7 @@ eleventyExcludeFromCollections: true
     </nav>
     <div class="cell-links">
       <a href="{{ '/feed.xml' | url }}">RSS</a>
-      <a href="mailto:antimatter888@gmail.com">antimatter888@gmail.com</a>
+      <a href="https://www.henryweikel.net/">henryweikel.net</a>
     </div>
     <div class="cell-post" id="post-content">
     </div>
