edit tshn, change mobile stack order

--- a/index.njk
+++ b/index.njk
@@ -283,6 +283,14 @@ eleventyExcludeFromCollections: true
       .cell-post {
         grid-row: auto;
         grid-column: auto;
+        order: 2;
+      }
+
+      .cell-nav {
+        order: 3;
+      }
+
+      .cell-links {
         order: 4;
       }
     }
